# human-multi-area-model

./: .gitignore  README.md  Snakefile  humam_tutorial.ipynb  pyproject.toml  requirements.txt
misc/: README.md
misc/publication_figures/: figure_connectivity_construction.py  figure_connectivity_validation.py  figure_mult_and_autapses_count.py  figure_scaling_experiments.py  figure_spike_journey.py
src/: __init__.py  analysis.py  compute_scaling_experiments.py  default_net_params.py  default_sim_params.py  figure_connectivity_construction.py  figure_connectivity_matrices.py  figure_connectivity_validation.py  figure_mult_and_autapses_count.py  figure_scaling_experiments.py  figure_spike_journey.py  figure_theory.py  network.py  simulation.py  snakemake_analysis.py  snakemake_network.py  snakemake_simulation.py
src/compute_scaling_experiments/: __init__.py  compute_scaling_experiments.py
src/data_loader/: __init__.py  dk_fullnames_to_shortnames.py  hcp_dti.py  mapping_DK_vEK.py  microcircuit.py  ratio_exc_to_inh.py  rutishauser.py  synapse_cellbody_probability.py  voneconomokoskinas.py
src/data_preprocessing/: connectivity.py  cytoarchitecture.py
src/figures/: figure_connectivity_construction.py  figure_connectivity_matrices.py  figure_connectivity_validation.py  figure_mult_and_autapses_count.py  figure_scaling_experiments.py  figure_spike_journey.py  figure_theory.py
src/helpers/: lognormal.py  resting_state_networks.py  snakemake.py
src/humam/: __init__.py  analysis.py  network.py  simulation.py
src/humam/data_loader/: __init__.py  microcircuit.py  voneconomokoskinas.py
src/humam/data_preprocessing/: __init__.py  cytoarchitecture.py
src/humam/figures/: figure_connectivity_matrices.py  figure_theory.py
src/humam/helpers/: __init__.py  resting_state_networks.py
src/humam/params/: __init__.py
src/humam/snakemake/: snakemake_helpers.py
src/humam/theory/: __init__.py
src/params/: default_ana_params.py  default_net_params.py
src/snakemake/: snakemake_analysis.py  snakemake_helpers.py  snakemake_network.py  snakemake_simulation.py
src/theory/: rates.py
