[project]
name = "humam"
version = "2.1.0-a1"
description = "The multi-scale spiking network model comprises all 34 areas of the Desikan-Killiany parcellation in one hemisphere of human cerebral cortex."
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Renan Oliveira Shimoura", email = "r.shimoura@fz-juelich.de"},
  {name = "Jari Pronold"},
  {name = "Alexander van Meegen"},
  {name = "Sebastian Spreizer", email = "spreizer@web.de"},
]
maintainers = [
  {name = "Renan Oliveira Shimoura", email = "r.shimoura@fz-juelich.de"},
]
keywords = ["human", "multi-area-model"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
]
dynamic = ["dependencies"]

[tool.black]
line-length = 120

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
